# Neural-Networks-From-Scratch-in-Cpp

./: .gitignore  CMakeLists.txt  README.md  app  build.sh  config.h  git.sh  main.cpp  myOps.cpp  myOps.h
